[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-framework-mvc"
authors = [
    {name = "Frédérick NEY", email = "frederick.ney@gmail.com"},
]
description = "Flask MVC framework"
readme = "readme.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
version="1.0.3"
dependencies = [
    "certifi",
    "Jinja2",
    "requests",
    "urllib3",
    "Werkzeug",
    "gunicorn",
    "gevent",
    "pyyaml",
    "pyopenssl",
    "WTForms",
    "PyCrypto",
    "SQLAlchemy",
    "redis",
    "Flask",
    "Flask-GeoIP",
    "Flask-LoginManager",
    "flask-monitor",
    "Flask-Profile",
    "Flask-Builder",
    "Flask-Auth",
    "Flask-APScheduler",
    "flask-sqlalchemy",
    "Flask-Sessions",
    "Flask-Login",
    "Flask-SocketIO",
    "Flask-WTF",
    "Flask-Session",
    "Flask-Script",
    "Flask-Migrate",
    "flask-saml",
    "python-ldap",
    'importlib-metadata; python_version>"3.7"'
]


[tool.poetry]
include = ["src/flask_framework/template","src/flask_framework/static"]

[metadata]
version = {"attr" =  "1.0.3"}


[tool.setuptools.package-data]
"flask_framework.template" = ["*", "layout/*"]
"flask_framework.static" = ["*", "css/*"]

[project.urls]
Homepage = "https://github.com/frederickney/flask-framework"
Documentation = "https://github.com/frederickney/flask-framework/blob/master/readme.md"
Repository = "https://github.com/mfrederickney/flask-framework"
Issues = "https://github.com/frederickney/flask-framework/issues"
source = "https://github.com/frederickney/flask-framework"

[project.entry-points."flask_framework"]
wsgi = "flask_framework:wsgi"
server =  "flask_framework:server"
app =  "flask_framework:app"
