[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-framework-mvc"
authors = [
    {name = "Frédérick NEY", email = "frederick.ney@gmail.com"},
]
description = "Flask MVC framework"
readme = "readme.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
"Environment :: Web Environment",
"Intended Audience :: Developers",
"Operating System :: OS Independent",
"Framework :: Flask",
"Topic :: Software Development :: Libraries :: Python Modules",
'Programming Language :: Python :: 3.7',
'Programming Language :: Python :: 3.8',
'Programming Language :: Python :: 3.9',
'Programming Language :: Python :: 3.10',
'Programming Language :: Python :: 3.11',
'Programming Language :: Python :: 3.12',
'Programming Language :: Python :: 3.13',
]
dependencies = [
    "certifi",
    "Jinja2",
    "requests",
    "urllib3",
    "Werkzeug",
    "gunicorn",
    "pyyaml",
    "pyopenssl",
    "WTForms",
    "SQLAlchemy",
    "redis",
    "tornado",
    "python-ldap",
    "activedirectory",
    "email-validator",
    "Flask",
    "Flask-GeoIP",
    "Flask-LoginManager",
    "flask-monitor",
    "Flask-Profile",
    "Flask-Builder",
    "Flask-Auth",
    "Flask-APScheduler",
    "flask-sqlalchemy",
    "Flask-Sessions",
    "Flask-Login",
    "flask-login-saml",
    "flask-login-oidc",
    "Flask-SocketIO",
    "Flask-WTF",
    "Flask-Session",
    "Flask-Script",
    "Flask-Migrate",
    'importlib-metadata; python_version>"3.7"'
]
version="1.1.1"


[tool.poetry]
include = ["src/flask_framework/template","src/flask_framework/static"]


[tool.setuptools.package-data]
"flask_framework.template" = ["**", "*.html"]
"flask_framework.static" = ["**", "*.*"]

[project.urls]
Homepage = "https://github.com/frederickney/flask-framework"
Documentation = "https://github.com/frederickney/flask-framework/blob/master/readme.md"
Repository = "https://github.com/frederickney/flask-framework"
Issues = "https://github.com/frederickney/flask-framework/issues"
source = "https://github.com/frederickney/flask-framework"

[project.entry-points."flask_framework"]
wsgi = "flask_framework:wsgi"
server =  "flask_framework:server"
app =  "flask_framework:app"
